[package]
name = "solana-hmac-drbg"
authors = ["Dean Little <@deanmlittle>"]
description = "An efficient implementation of HMAC-DRBG for SVM"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "solana_hmac_drbg"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-hmac-sha256 = "0.2.0"